chore: remove need for university_name in requests
