# package/src/swagger_server/controllers/delete_functions.py
@@ -1,9 +1,9 @@
 from .global_vars import IDB
 
-def _delete_student_entry(university_name, _id):
-    doc = IDB[university_name].find_one({"_id": _id})
+def _delete_student_entry(_id):
+    doc = IDB.find_one({"_id": _id})
     if doc:
-        IDB[university_name].delete_one({"_id": _id})
+        IDB.delete_one({"_id": _id})
         return True
     else:
         return {'ERROR': 'No matching document id.'}, 409
